# Sketchbook

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
docs/: devlog.md  index.md
src/: entity_marker.rs  entity_markers.rs  lib.rs  main.rs  palette.rs  state.rs  states.rs
src/component/: direction.rs  mod.rs  position.rs  velocity.rs
src/plugin/: dev.rs  game.rs  group.rs  level_screen.rs  main.rs  mod.rs  title_screen.rs
src/plugins/: dev.rs  main.rs  mod.rs
src/puzzle/: gravity.rs  mod.rs  player.rs  plugin.rs
src/screens/: level_screen.rs  mod.rs  title_screen.rs
src/screens/level_screen/: mod.rs  player.rs
src/system/: mod.rs  player.rs  setup.rs  spawn_player.rs  title_screen.rs
